--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 .header {
 
-    background-image: url("../img/headerimg.png");
+    background-image: url("../img/headerimg2.png");
     width:100%;
     height:100vh;
     background-repeat:no-repeat;
@@ -24,9 +24,9 @@
 .headertxt h1{
 
     font-size: 50px;
-    color: rgb(248, 99, 12);
+    color: white;
     font-weight: 1000px;
-    padding-top: 2cm;
+    padding-top: 6cm;
     padding-left: 4cm;
     padding-right: 6cm;
 
@@ -34,7 +34,7 @@
 
 .headertxt p{
 
-    color:rgb(10, 10, 10);
+    color:white;
     font-size: 20px;
     
 }
